--- a/evangady/evanreact/forme/index.html
+++ b/evangady/evanreact/forme/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>reactt</title>
+<script src="/reactJS/evangady/forme/script.js" defer></script>
 </head>
 <body>
     <table class="table" id="table"></table>
