to include javascript

--- a/evangady/evanreact/forme/index.html
+++ b/evangady/evanreact/forme/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <table class="table" id="table"></table>
+    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
 </body>
 </html>
