some part to correct

--- a/evangady/evanreact/forme/index.html
+++ b/evangady/evanreact/forme/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>reactt</title>
-<script src="/reactJS/evangady/forme/script.js" defer></script>
+    <script src="/reactJS/evangady/forme/script.js"></script>
 </head>
+
 <body>
     <table class="table" id="table"></table>
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+    <script src="/reactJS/evangady/evanreact/forme/script.js"></script>
 </body>
+
 </html>
